<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_record"
    tools:context="com.warwickcodingapp.AddRecordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/profilePicture"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="5dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/profilepicture_add"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"
                android:hint="@string/addUser_editText_name"
                android:textSize="20sp"/>

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/addUser_editText_email"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/age"
            android:layout_width="100dp"
            android:hint="@string/addUser_editText_age"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"/>

        <EditText
            android:id="@+id/location"
            android:layout_width="match_parent"
            android:hint="@string/addUser_editText_location"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center_vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addUser_textView_gender"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>
            <Spinner
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:entries="@array/addUser_genderList">
            </Spinner>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/createRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/red_button_selector"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textColor="@android:color/white"
        android:text="@string/addUser_button_create"/>
</RelativeLayout>
