<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@android:color/white"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-15dp"
            android:src="@drawable/warwick_coding_logo"/>

        <TextView
            android:id="@+id/courseText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_textView_androidCourse"
            android:textSize="24sp"
            android:textColor="#363636"
            android:layout_marginBottom="20dp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:hint="@string/main_editText_password"
            android:gravity="center"
            android:singleLine="true"
            android:layout_marginBottom="20dp"/>

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/red_button_selector"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="start"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/main_button_start"/>
    </LinearLayout>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginBottom="-2dp"
        android:src="@drawable/android_robot"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>
</RelativeLayout>
